2008-06-08	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime-dialog.c, panel-plugin/datetime.c: Changed
	default format to ISO 8601, added a new format, and added separators
	to the dropdowns.
	* panel-plugin/datetime-dialog.c: Attachment #1659 by Steve Tyler from
	Bug #4115, changing the way the date/time format dropdowns work.
	* panel-plugin/datetime-dialog.c: Moved message about the calendar's
	week starting on a day defined by the locale to the wiki (Bug #4123)
	* panel-plugin/datetime.{c,h}: Fix Bug #4110: time is not updated in
	tooltip while it is displayed.
	* panel-plugin/datetime.{c,h}, panel-plugin/datetime-dialog.c: New
	tooltips implementation (only enabled on GTK >= 2.12).

2008-06-03	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime-dialog.c: Add help button that opens web site
	(Bug #4099). Thanks to Nick Schermer's r2263 of the
	xfce4-battery-plugin.

2008-05-31	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime.c: Steve Tyler's updated comments, etc (Bug #4117)

2008-05-29	Diego Ongaro <ongardie@gmail.com>

	* panl-plugin/datetime.{c,h}: Update on the top of every second or
	minute and no more (Bug #4119, based on patch by Steve Tyler)
	* panel-plugin/datetime.c: Always update every second when seconds are
	shown (Bug #4117)

2008-05-27	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime.c: "Fix tooltip hiding" uses gtk2.12 function,
	  put preprocessor #if around it
	* {,po/}ChangeLog, panel-plugin/*.{c,h}: formatting

2008-05-21	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime.c:
	  - Remove date input (Bug #4023)
	  - Fix tooltip hiding

2008-05-18	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime-dialog.c: Missing static keywords

2008-05-17	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime-dialog.c:
	  - translate strings in combo boxes
	* panel-plugin/datetime.c:
	  - Use GtkToggleButton in panel (Bug #3456)